idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/duplicateActuals/jvm/jvm.kt
package foo

actual class ExplicitlyDuplicatedByMiddleAndJvm
class <error descr="[ACTUAL_MISSING] Declaration must be marked with 'actual'">ImplicitlyDuplicatedByMiddleAndJvm</error>
